# name-lookup

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  compose.yaml  entrypoint.sh  nginx.conf  package-lock.json  package.json  tailwind.cjs  tailwind.config.cjs  webpack.config.cjs
assets/: index.js  main.css
cloudflared/: Dockerfile  config.yml  entrypoint.sh
migrations/: 20250121182654_create_table_names.sql
src/: error.rs  html_template.rs  initializer.rs  main.rs  router.rs  tls.rs
src/html_template/: html_error.rs  joke.rs  lookup.rs
src/initializer/: app_state.rs  logs.rs  seed.rs
templates/: base.html  error.html  lookup.html
templates/joke/: index.html
templates/lookup/: index.html  response.html
