[package]
name = "name-lookup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
askama = "0.12.1"
axum = "0.8.1"
bloom-filter-yss = { path = "../bloom_filter" }
dotenvy = "0.15.7"
futures = "0.3.31"
reqwest = "0.12.12"
serde = "1.0.217"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
