[package]
name = "name-lookup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
askama = "0.12.1"
axum = "0.8.1"
axum-extra = "0.10.0"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
bloom-filter-yss = "0.3.3"
dotenvy = "0.15.7"
futures = "0.3.31"
listenfd = "1.0.2"
reqwest = "0.12.12"
serde = "1.0.217"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
